force-app/main/default/objects/PD_Request__c/PD_Request__c.object-meta.xml
<CustomObject>
    <label>PD Request</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>PD Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PD Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>