force-app/main/default/objects/PD_Request__c/fields/Additional_BR_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Additional_BR_Contribution__c</fullName>
    <label>Additional BR Contribution</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>