force-app/main/default/objects/PD_Request__c/fields/Approved_by_Direct_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Direct_Supervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>By ticking this box, you acknowledge that your PD Request has been approved and discussed with your direct supervisor</inlineHelpText>
    <label>Approved by Direct Supervisor</label>
    <type>Checkbox</type>
</CustomField>