force-app/main/default/objects/PD_Request__c/fields/Cost_from_Annual_PD__c.field-meta.xml
<CustomField>
    <fullName>Cost_from_Annual_PD__c</fullName>
    <label>Cost from Annual PD</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>