force-app/main/default/objects/PD_Request__c/fields/Course_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Course_Date_1__c</fullName>
    <label>Course Date 1</label>
    <required>true</required>
    <type>Date</type>
</CustomField>