force-app/main/default/objects/PD_Request__c/fields/Course_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Course_Date_2__c</fullName>
    <label>Course Date 2</label>
    <type>Date</type>
</CustomField>