force-app/main/default/objects/PD_Request__c/fields/Course_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Course_Date_3__c</fullName>
    <label>Course Date 3</label>
    <type>Date</type>
</CustomField>