force-app/main/default/objects/PD_Request__c/fields/Course_is_Paid__c.field-meta.xml
<CustomField>
    <fullName>Course_is_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Course is Paid/Reimbursed</label>
    <type>Checkbox</type>
</CustomField>