force-app/main/default/objects/PD_Request__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <inlineHelpText>If your course is not listed, choose &apos;Other&apos; and write your course name in the below box</inlineHelpText>
    <label>Course Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Aid / CPR</fullName>
            </value>
            <value>
                <fullName>Mental Health First Aid</fullName>
            </value>
            <value>
                <fullName>Home Modifications</fullName>
            </value>
            <value>
                <fullName>OT Driver Assessor Course</fullName>
            </value>
            <value>
                <fullName>Assistive Technology</fullName>
            </value>
            <value>
                <fullName>Diagnosis specific training</fullName>
            </value>
            <value>
                <fullName>Therapy interventions</fullName>
            </value>
            <value>
                <fullName>Accredited clinical courses</fullName>
            </value>
            <value>
                <fullName>Leadership skills</fullName>
            </value>
            <value>
                <fullName>Professional governing bodies</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (Please specify)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>