force-app/main/default/objects/PD_Request__c/fields/Course_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Course_Payment_Amount__c</fullName>
    <label>Course Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>