force-app/main/default/objects/PD_Request__c/fields/Course_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Payment_Date__c</fullName>
    <label>Course Payment/Reimbursement Date</label>
    <type>Date</type>
</CustomField>