force-app/main/default/objects/PD_Request__c/fields/Current_Office_Manager__c.field-meta.xml
<CustomField>
    <fullName>Current_Office_Manager__c</fullName>
    <formula>IF(  $User.FirstName &amp; &quot; &quot; &amp; $User.LastName  =  Office_Manager__c , TRUE, FALSE)</formula>
    <label>Current Office Manager</label>
    <type>Checkbox</type>
</CustomField>