force-app/main/default/objects/PD_Request__c/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <formula>IF(Employee_Name__r.enrtcr__User__r.Id = $User.Id, TRUE, FALSE)</formula>
    <label>Current User</label>
    <type>Checkbox</type>
</CustomField>