force-app/main/default/objects/PD_Request__c/fields/Date_bypass__c.field-meta.xml
<CustomField>
    <fullName>Date_bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only for system back-end use. If it&apos;s true, user can edit the PD dates and status/cost.</inlineHelpText>
    <label>Date bypass</label>
    <type>Checkbox</type>
</CustomField>