force-app/main/default/objects/PD_Request__c/fields/Days_of_Leave_Required__c.field-meta.xml
<CustomField>
    <fullName>Days_of_Leave_Required__c</fullName>
    <inlineHelpText>Please detail the anticipated days of leave required between 0 and 4 days of leave within 0.5 increment.</inlineHelpText>
    <label>Days of Leave Required</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>