force-app/main/default/objects/PD_Request__c/fields/Department_Manager__c.field-meta.xml
<CustomField>
    <fullName>Department_Manager__c</fullName>
    <formula>IF(TEXT(Employee_Name__r.Direct_Supervisor__r.Direct_Supervisor__r.Internal_Banding__c) = &apos;Director&apos;
,&apos;&apos; , Employee_Name__r.Direct_Supervisor__r.Direct_Supervisor__r.enrtcr__Full_Name__c)</formula>
    <label>Department Manager</label>
    <type>Text</type>
</CustomField>