force-app/main/default/objects/PD_Request__c/fields/Dept_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Dept_Manager_ID__c</fullName>
    <formula>IF(TEXT(Employee_Name__r.Direct_Supervisor__r.Direct_Supervisor__r.Internal_Banding__c) = &apos;Director&apos;
,&apos;&apos; , Employee_Name__r.Direct_Supervisor__r.Direct_Supervisor__c)</formula>
    <label>Dept Manager ID</label>
    <type>Text</type>
</CustomField>