force-app/main/default/objects/PD_Request__c/fields/Direct_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Direct_Supervisor__c</fullName>
    <formula>IF(TEXT(Employee_Name__r.Direct_Supervisor__r.Internal_Banding__c) = &apos;Director&apos; &amp;&amp; RecordType.DeveloperName != &apos;Leadership&apos;, &apos;&apos;, Employee_Name__r.Direct_Supervisor__r.enrtcr__Full_Name__c)</formula>
    <label>Direct Supervisor</label>
    <type>Text</type>
</CustomField>