force-app/main/default/objects/PD_Request__c/fields/Direct_Supervisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Direct_Supervisor_Email__c</fullName>
    <formula>Employee_Name__r.Direct_Supervisor__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Supervisor Email</label>
    <type>Text</type>
</CustomField>