force-app/main/default/objects/PD_Request__c/fields/Expected_Learning_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Expected_Learning_Outcomes__c</fullName>
    <inlineHelpText>Please list expected outcomes of participating in the event. Outcomes will be measured following the completion/conclusion of the event.</inlineHelpText>
    <label>Expected Learning Outcomes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>