force-app/main/default/objects/PD_Request__c/fields/Information_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Information_Sharing__c</fullName>
    <inlineHelpText>Please note how you expect information to be shared amongst your peers (team meeting, in-service, LMS module etc.)</inlineHelpText>
    <label>Information Sharing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>