force-app/main/default/objects/PD_Request__c/fields/Internal_Banding__c.field-meta.xml
<CustomField>
    <fullName>Internal_Banding__c</fullName>
    <formula>TEXT(Employee_Name__r.Internal_Banding__c)</formula>
    <label>Internal Banding</label>
    <type>Text</type>
</CustomField>