force-app/main/default/objects/PD_Request__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <formula>Employee_Name__r.Job_Title__c</formula>
    <label>Job Title</label>
    <type>Text</type>
</CustomField>