force-app/main/default/objects/PD_Request__c/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <formula>Employee_Name__r.enrtcr__Site__r.Name</formula>
    <label>Office Location</label>
    <type>Text</type>
</CustomField>