force-app/main/default/objects/PD_Request__c/fields/Office_Manager__c.field-meta.xml
<CustomField>
    <fullName>Office_Manager__c</fullName>
    <formula>Employee_Name__r.enrtcr__Site__r.Office_Admin__r.FirstName + &quot; &quot; +  Employee_Name__r.enrtcr__Site__r.Office_Admin__r.LastName</formula>
    <label>Office Manager</label>
    <type>Text</type>
</CustomField>