force-app/main/default/objects/PD_Request__c/fields/Operation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Operation_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operation Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Internal_Banding__c</field>
            <operation>equals</operation>
            <value>Operations Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PD Requests (Operation Manager)</relationshipLabel>
    <relationshipName>PD_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>