force-app/main/default/objects/PD_Request__c/fields/Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Operations_Manager__c</fullName>
    <formula>Operation_Manager__r.enrtcr__Full_Name__c</formula>
    <label>Operations Manager</label>
    <type>Text</type>
</CustomField>