force-app/main/default/objects/PD_Request__c/fields/Operations_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Operations_Manager_ID__c</fullName>
    <formula>Operation_Manager__r.Id</formula>
    <label>Operations Manager ID</label>
    <type>Text</type>
</CustomField>