force-app/main/default/objects/PD_Request__c/fields/Other_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Course_Name__c</fullName>
    <label>Other Course Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>