force-app/main/default/objects/PD_Request__c/fields/Payment_Comment__c.field-meta.xml
<CustomField>
    <fullName>Payment_Comment__c</fullName>
    <label>Payment Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>