force-app/main/default/objects/PD_Request__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>Employee_Name__r.enrtcr__Site__r.enrtcr__Business_State__c</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>