force-app/main/default/objects/PD_Request__c/fields/Summary_of_Training__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Training__c</fullName>
    <label>Summary of Training</label>
    <type>TextArea</type>
</CustomField>