force-app/main/default/objects/PD_Request__c/fields/Supplier_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Company_Name__c</fullName>
    <inlineHelpText>Please indicate the course or certification company name</inlineHelpText>
    <label>Supplier/Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>