force-app/main/default/objects/PD_Request__c/fields/Total_Self_Funded_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Self_Funded_Cost__c</fullName>
    <formula>Cost_of_Course__c -  Total_Subsidised_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total cost that the employee has to pay out-of-pocket</inlineHelpText>
    <label>Total Self-Funded Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>