force-app/main/default/objects/PD_Request__c/fields/Total_Subsidised_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Subsidised_Cost__c</fullName>
    <formula>Cost_from_Annual_PD__c +   Cost_from_Rewards_PD__c +  Additional_BR_Contribution__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Subsidised Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>