force-app/main/default/objects/PD_Request__c/recordTypes/Allied_Health_Assistant.recordType-meta.xml
<RecordType>
    <fullName>Allied_Health_Assistant</fullName>
    <active>true</active>
    <description>For AHAs</description>
    <label>Allied Health Assistant</label>
</RecordType>