force-app/main/default/objects/PD_Request__c/recordTypes/Clinician.recordType-meta.xml
<RecordType>
    <fullName>Clinician</fullName>
    <active>true</active>
    <description>For clinicians and team leaders only</description>
    <label>Clinician</label>
</RecordType>