force-app/main/default/objects/PD_Request__c/recordTypes/Leadership.recordType-meta.xml
<RecordType>
    <fullName>Leadership</fullName>
    <active>true</active>
    <description>For RMs, NCLs, SMs and HST State Leads</description>
    <label>Leadership</label>
</RecordType>