force-app/main/default/objects/PD_Request__c/recordTypes/Operational.recordType-meta.xml
<RecordType>
    <fullName>Operational</fullName>
    <active>true</active>
    <description>For operational staff (Office managers, P&amp;C, Marketing, IT)</description>
    <label>Operational</label>
</RecordType>