force-app/main/default/objects/PD_Request__c/recordTypes/Principal_Clinician.recordType-meta.xml
<RecordType>
    <fullName>Principal_Clinician</fullName>
    <active>true</active>
    <description>For principal clinicians</description>
    <label>Principal Clinician</label>
</RecordType>