force-app/main/default/objects/PD_Request__c/validationRules/Approved_by_CS_and_DS.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_by_CS_and_DS</fullName>
    <active>true</active>
    <description>Supervisor approval has to be checked</description>
    <errorConditionFormula>AND( 
RecordType.Name = &apos;Clinician&apos;,
Approved_by_Clinical_Supervisor__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Approved_by_Clinical_Supervisor__c</errorDisplayField>
    <errorMessage>Please confirm that your supervisor has approved</errorMessage>
</ValidationRule>