force-app/main/default/objects/PD_Request__c/validationRules/Course_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_Dates</fullName>
    <active>true</active>
    <description>Course date 1,2,3,4 have to be filled in ascending order.</description>
    <errorConditionFormula>AND(NOT(ISBLANK( Course_Date_4__c)),
NOT(
OR( AND((Course_Date_1__c &lt; Course_Date_2__c) ,  (Course_Date_2__c &lt; Course_Date_3__c),  (Course_Date_3__c &lt; Course_Date_4__c))
 )
)
)</errorConditionFormula>
    <errorMessage>Course dates have to be ascending</errorMessage>
</ValidationRule>