force-app/main/default/objects/PD_Request__c/validationRules/Days_of_Leave.validationRule-meta.xml
<ValidationRule>
    <fullName>Days_of_Leave</fullName>
    <active>true</active>
    <description>Maximum days of leave that can be requested is 4 days.</description>
    <errorConditionFormula>Days_of_Leave_Required__c &gt; 4</errorConditionFormula>
    <errorDisplayField>Days_of_Leave_Required__c</errorDisplayField>
    <errorMessage>You cannot enter more than 4 days of leave.</errorMessage>
</ValidationRule>