force-app/main/default/objects/PD_Request__c/validationRules/Other_course_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_course_name</fullName>
    <active>true</active>
    <description>Enter your course name if it&apos;s not listed</description>
    <errorConditionFormula>AND(
    TEXT( Course_Name__c ) = &quot;Other&quot;,
    ISBLANK( Other_Course_Name__c )
)</errorConditionFormula>
    <errorMessage>You need to specify your course name</errorMessage>
</ValidationRule>