force-app/main/default/objects/PD_Request__c/validationRules/Restrict_Non_Supervisor_Status_Cost.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Non_Supervisor_Status_Cost</fullName>
    <active>false</active>
    <description>If the request is still pending, only supervisors can edit status and subsidized cost (for system admin)</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Status__c, &apos;Approved&apos;) ||  ISPICKVAL(Status__c, &apos;Denied&apos;),
 $User.Id = Employee_Name__r.enrtcr__User__r.Id 
)</errorConditionFormula>
    <errorMessage>You are not allowed to change the status/cost of this PD Request</errorMessage>
</ValidationRule>