force-app/main/default/objects/PD_Request__c/validationRules/Restrict_Record_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Record_Edit</fullName>
    <active>false</active>
    <description>Restricting record edit to only supervisors</description>
    <errorConditionFormula>AND(
    Record_Locked__c = TRUE,
    $User.Id = Employee_Name__r.enrtcr__User__r.Id 
)</errorConditionFormula>
    <errorMessage>You cannot change this record after creation. Please create a new PD Request.</errorMessage>
</ValidationRule>