force-app/main/default/objects/PD_Request__c/listViews/All_Principal_Clinician.listView-meta.xml
<ListView>
    <fullName>All_Principal_Clinician</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Internal_Banding__c</columns>
    <columns>Course_Name__c</columns>
    <columns>Other_Course_Name__c</columns>
    <columns>Status__c</columns>
    <columns>State_Manager__c</columns>
    <columns>Direct_Supervisor__c</columns>
    <columns>Course_Date_1__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PD_Request__c.Principal_Clinician</value>
    </filters>
    <label>All (Principal Clinician)</label>
    <sharedTo>
        <group>L_D</group>
    </sharedTo>
</ListView>