force-app/main/default/objects/PD_Request__c/listViews/Copy_of_PD_Requests_at_My_Office.listView-meta.xml
<ListView>
    <fullName>Copy_of_PD_Requests_at_My_Office</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Course_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Subsidized_Cost__c</columns>
    <columns>Direct_Supervisor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Direct_Supervisor__c</field>
        <operation>contains</operation>
    </filters>
    <label>My Team PD Requests</label>
</ListView>