force-app/main/default/objects/PD_Request__c/listViews/My_PD_Requests.listView-meta.xml
<ListView>
    <fullName>My_PD_Requests</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Course_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Subsidized_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My PD Requests</label>
</ListView>