force-app/main/default/objects/PD_Request__c/listViews/VIC_PD_s.listView-meta.xml
<ListView>
    <fullName>VIC_PD_s</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Internal_Banding__c</columns>
    <columns>Course_Name__c</columns>
    <columns>Other_Course_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Principal_Clinician__c</columns>
    <columns>Regional_Manager__c</columns>
    <columns>Course_Date_1__c</columns>
    <columns>Subsidized_Cost__c</columns>
    <columns>Course_Payment_Amount__c</columns>
    <columns>Course_Payment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PD_Request__c.Allied_Health_Assistant,PD_Request__c.Clinician,PD_Request__c.Leadership,PD_Request__c.Operational,PD_Request__c.Principal_Clinician</value>
    </filters>
    <filters>
        <field>Employee_Name__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Course_Name__c</field>
        <operation>equals</operation>
        <value>First Aid / CPR,Mental Health First Aid,Home Modifications,OT Driver Assessor Course,Assistive Technology,Diagnosis specific training,Therapy interventions,Accredited clinical courses,Leadership skills,Professional governing bodies,Other</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>contains</operation>
        <value>VIC,SA,tas</value>
    </filters>
    <filters>
        <field>Office_Location__c</field>
        <operation>contains</operation>
    </filters>
    <label>VIC PD&apos;s</label>
</ListView>